--- a/index.css
+++ b/index.css
@@ -1,72 +1,88 @@
-body{
+body {
     margin: 0;
     overflow-x: hidden;
-    background-color: rgb(196, 200, 255) !important;
-    padding-bottom: 3rem !important;
+    /* height: 100vh; */
+    background: url(/img/bg.jpg) !important;
+    background-repeat: no-repeat !important;
+    background-size: cover !important;
+    padding-bottom: 4rem !important;
 }
-.navbar{
-    background-color: rgb(3,6,48);
+
+.navbar {
+    background-color: rgba(0, 0, 0, 0.233);
 }
-.nav-icon{
+
+.nav-icon {
     margin-bottom: 3px !important;
 }
-.navbar-brand{
-    color: rgba(213, 215, 255, 0.918) !important;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif !important;
+
+.navbar-brand {
+    color: white !important;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif !important;
 
 }
-.navbar-nav a{
-    color: rgba(213, 215, 255, 0.918) !important;
-    font-family:sans-serif !important;
+
+.navbar-nav a {
+    color: white !important;
+    font-family: sans-serif !important;
 
 }
-.navbar-toggler{
+
+.navbar-toggler {
     border: none !important;
 }
+
 .navbar-toggler:focus,
-.navbar-toggler:active
-{
+.navbar-toggler:active {
     outline: none !important;
     border: none !important;
     box-shadow: none !important;
 }
 
 
-.todo-head{
+.todo-head {
     text-align: center;
+    color: white;
+    text-shadow: 1px 0px 1px black;
     padding-top: 2.7rem;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
-.todo-icon{
+
+.todo-icon {
     margin-bottom: 3px;
 }
-.input-div{
+
+.input-div {
     display: flex;
     height: 2.5rem;
     margin-top: 4rem;
 }
-#box{
+
+#box {
     border: none;
-    margin: 0rem 0px 0 29vw   ;
-    padding: 0.4rem 25vw 0.4rem 0.8rem; 
+    margin: 0rem 0px 0 29vw;
+    padding: 0.4rem 25vw 0.4rem 0.8rem;
     box-shadow: 1px 1px 6px rgba(0, 0, 0, 0.219);
     border-radius: 50px;
 }
-#box::placeholder{
+
+#box::placeholder {
     padding-left: 0.2rem;
 }
-.btn-div{
+
+.btn-div {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 2.2rem;
     height: 2.2rem;
-    background-color: rgb(3,6,48);
+    background-color: rgb(3, 6, 48);
     border-radius: 50%;
     margin-top: 3px;
-    margin-left:-2.4rem;
+    margin-left: -2.4rem;
 }
-.add-btn{
+
+.add-btn {
     border: none;
     color: rgb(255, 255, 255);
     background-color: transparent;
@@ -75,44 +91,52 @@ body{
     font-size: 2.2rem;
 
 }
+
 #box:active,
-#box:focus{
+#box:focus {
     outline: none;
 }
-.head-span{
-    background-color: rgb(3,6,48);
+
+.head-span {
+    background-color: rgb(3, 6, 48);
     color: rgb(161, 183, 255);
 }
-#result{
+
+#result {
     list-style-type: none;
-    width: 60vw;
-    background-color: white;
-    margin-left: 19%;
+    width: 50vw;
+    background-color: rgba(243, 243, 243, 0.301);
+    margin-left: 23%;
     margin-top: 7vh;
     border-radius: 5px;
-
+    box-shadow: 1px 1px 6px rgba(0, 0, 0, 0.219);
 }
-#result li{
+
+#result li {
     display: grid;
     grid-template-columns: auto 1fr auto auto auto;
-    gap: 5px;
-    background-color: rgb(255, 255, 255);
-    padding: 3px;
+    gap: 7px;
+    padding: 1px 1px 0px 2px;
     border-radius: 5px;
+    box-shadow: 0px 2px 0px rgba(0, 0, 0, 0.219);
+    /* margin-top: -3px; */
 }
-#checkbox{
-    width: 30px;
-    height: 30px;
-    margin: 2px 1px;
+
+#checkbox {
+    width: 22px;
+    height: 26px;
+    margin: 5px 1px;
     appearance: none;
     border: 2px solid #ccc;
-    transition:  all 1s ease;
+    transition: all 0.5s ease;
 
 }
-#checkbox:checked{
+
+#checkbox:checked {
     background-color: rgb(0, 112, 9);
 }
-#checkbox:checked::after{
+
+#checkbox:checked::after {
     content: '\2713';
     color: white;
     display: flex;
@@ -120,159 +144,269 @@ body{
     align-items: center;
     font-size: 18px;
 }
-#cbox{
+
+#cbox {
     border: none;
-    color: rgb(3,6,48);
-    background-color: rgba(206, 209, 255, 0.726);
+    color: rgb(3, 6, 48);
+    background-color: rgba(233, 235, 255, 0.726);
     font-weight: 500;
     border-radius: 3px;
     font-size: 15px;
-    padding-left: 5px;
+    padding-left: 8px;
+    padding-top: 1px;
 }
+
 #cbox:active,
-#cbox:focus{
+#cbox:focus {
     outline: none;
 }
-.index{
-    color: white;
+
+.index {
     font-size: 17px;
-    font-weight: 600;
-    margin-left: -1.9rem;
-    padding-left: 12px;
-    background-color: rgb(3,6,48);
-    border-radius: 3px;
-    padding-top: 3px;
-}
-#span{
-    color: rgb(3,6,48);
     font-weight: 500;
-    font-size: 18px;
-    background-color: rgba(222, 224, 255, 0.589);
-    padding-left: 5px;
+    margin-left: -2rem;
+    padding: 5px 8px 1px 10px;
+    color: rgb(255, 255, 255);
     border-radius: 3px;
-    padding-top: 3px;
+    margin-top: 7px;
+    box-shadow: 0px 2px 0px rgba(0, 0, 0, 0.219);
+
 }
-#result button{
+
+#span {
+    color: rgb(255, 255, 255);
+    font-weight: 500;
+    font-size: 16px;
+    /* background-color: rgb(255, 255, 255); */
+    border-radius: 3px;
+    padding: 5px 5px 0px 5px;
+    margin-top: 7px;
+}
+
+#result button {
     border: none;
-    font-weight: 600;
+    font-weight: 400;
     color: white;
     border-radius: 3px;
+    height: 2rem;
+    margin-top: 3px;
 }
-.del{
-    background-color: rgb(189, 0, 0);
-    padding: 3px 5px;
+
+.del {
+    background-color: rgba(223, 8, 8, 0.925);
+    /* padding: 0px 7px; */
+
 }
-.edit{
+
+.edit {
     background-color: rgb(190, 190, 0);
-    padding: 0px 2px 3px 4px;
+    /* padding: 0px 6px 0px 8px; */
 }
-.sub-div{
+
+.del img {
+    width: 1rem;
+    height: 1rem;
+}
+
+.edit img {
+    width: 1rem;
+    height: 1rem;
+}
+
+.sub-div {
     display: flex;
     justify-content: center;
 }
-.submit{
+
+.submit {
     border: none;
 }
-@media all and (max-width:1000px){
-    .input-div{
+
+@media all and (max-width:1024px) {
+    .input-div {
         margin-top: 3.8rem;
     }
-    #box{
-        margin: 0rem 0px 0 25vw   ;
-        padding: 0.3rem 25vw 0.3rem 0.8rem; 
+
+    #box {
+        margin: 0rem 0px 0 25vw;
+        padding: 0.3rem 25vw 0.3rem 0.8rem;
     }
-    #result{
-        width: 80vw;
-        margin-left: 9%;
+
+    #result {
+        width: 55vw;
+        margin-left: 19%;
         margin-top: 7vh;
-    }#checkbox{
+    }
+
+    #checkbox {
         width: 27px;
         height: 27px;
         margin: 2px 1px;
     }
-    #checkbox:checked::after{
+
+    #checkbox:checked::after {
         font-size: 17px;
     }
 }
-@media all and (max-width:700px){
-    .input-div{
+
+@media all and (max-width:768px) {
+    .input-div {
         height: 2.2rem;
         margin-top: 2.8rem;
     }
-    #box{
-        margin: 0rem 0px 0 14vw   ;
-        padding: 0.2rem 25vw 0.2rem 0.8rem; 
+
+    #box {
+        margin: 0rem 0px 0 24vw;
+        padding: 0.2rem 25vw 0.2rem 0.8rem;
     }
-    .btn-div{
+
+    .btn-div {
         width: 2rem;
         height: 2rem;
         margin-top: 2px;
-        margin-left:-2.15rem;
+        margin-left: -2.15rem;
     }
-    .add-btn{
+
+    .add-btn {
         margin-top: -0.3rem;
         font-size: 1.8rem;
     }
-    #result{
-        width: 90vw;
-        margin-left: 5%;
-        margin-top: 7vh;
+
+    #result {
+        width: 60vw;
+        margin-left: 19%;
+        margin-top: 6vh;
     }
-    .del img{
+
+    .del img {
         width: 1.3rem;
         height: 1.3rem;
     }
-    .edit img{
+
+    .edit img {
         width: 1.3rem;
         height: 1.3rem;
     }
 }
-@media all and (max-width:320px){
-    .input-div{
-        height: 1.9rem;
-        margin-top: 2.3rem;
+
+@media all and (max-width:425px) {
+    .input-div {
+        margin-top: 2.1rem;
     }
-    #box{
-        margin: 0rem 0px 0 8vw   ;
-        padding: 0.3rem 25vw 0.2rem 0.8rem; 
+
+    #box {
+        margin: 0rem 0px 0 17vw;
+        padding: 0.2rem 23vw 0.2rem 0.8rem;
     }
-    .btn-div{
-        width: 1.74rem;
-        height: 1.74rem;
-        margin-top: 1.9px;
-        margin-left:-1.89rem;
+
+    #result {
+        width: 85vw;
+        margin-left: 8%;
+        margin-top: 6vh;
     }
-    .add-btn{
-        font-size: 1.7rem;
-    }
-    .del{
-        padding: 2px 3px;
-    }
-    .edit{
-        font-size: 14px;
-    }
-    .del img{
-        width: 1.15rem;
-        height: 1.15em;
-    }
-    .edit img{
-        width: 1.15rem;
-        height: 1.15rem;
-    }
-    .index{
-        font-size: 15px;
-        font-weight: 500;
-        padding-top: 3px;
-    }
-    #span{
-        font-size: 16px;
-    }
-    #checkbox{
+
+    /* #checkbox{
         width: 25px;
         height: 25px;
         margin: 2px 1px;
     }
     #checkbox:checked::after{
+        font-size: 15px;
+    } */
+    .add-btn {
+        font-size: 1.7rem;
+    }
+
+    .del {
+        padding: 2px 3px;
+    }
+
+    .edit {
+        font-size: 14px;
+    }
+
+    .del img {
+        width: 1.15rem;
+        height: 1.15em;
+    }
+
+    .edit img {
+        width: 1.15rem;
+        height: 1.15rem;
+    }
+
+    .index {
+        font-size: 15px;
+        font-weight: 500;
+        padding: 5px 8px 1px 10px;
+    }
+}
+
+@media all and (max-width:320px) {
+
+    #box {
+        margin: 0rem 0px 0 12vw;
+        padding: 0.3rem 20vw 0.2rem 0.8rem;
+    }
+
+    .btn-div {
+        width: 1.74rem;
+        height: 1.74rem;
+        margin-top: 1.9px;
+        margin-left: -1.89rem;
+    }
+
+    .add-btn {
+        font-size: 1.7rem;
+    }
+
+    .del {
+        background-color: rgba(223, 8, 8, 0.925);
+        /* padding: 0px 7px; */
+
+    }
+
+    .edit {
+        background-color: rgb(190, 190, 0);
+        /* padding: 0px 6px 0px 8px; */
+    }
+
+    .del img {
+        width: 1rem;
+        height: 1rem;
+    }
+
+    .edit img {
+        width: 1rem;
+        height: 1rem;
+    }
+
+    .del {
+        padding: 2px 6px;
+    }
+
+    .edit {
+        padding: 2px 6px;
+        font-size: 14px;
+    }
+
+    .index {
+        font-size: 15px;
+        font-weight: 500;
+        padding: 5px 8px 1px 10px;
+    }
+
+    #span {
+        font-size: 16px;
+    }
+
+    #checkbox {
+        width: 25px;
+        height: 25px;
+        margin: 2px 1px;
+    }
+
+    #checkbox:checked::after {
         font-size: 15px;
     }
 }
