--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     overflow-x: hidden;
-    /* height: 100vh; */
+    height: 100vh; 
     background-repeat: no-repeat !important;
     background-size: cover !important;
     padding-bottom: 4rem !important;
